# pipali

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  package.json
drizzle/: 0015_jittery_kylun.sql  0016_military_ma_gnuci.sql  0017_fancy_meteorite.sql  0018_salty_firebrand.sql
drizzle/maintenance/: 0018_vacuum_after_conversation_steps.sql  _journal.json
drizzle/meta/: 0014_snapshot.json  0015_snapshot.json  0016_snapshot.json  0017_snapshot.json  0018_snapshot.json  _journal.json
scripts/: build-tauri.ts  build.ts
scripts/linux/: linuxdeploy-plugin-gtk.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  notification.rs
src/client/: app.tsx
src/client/components/: ErrorBoundary.tsx  FindInPage.tsx
src/client/hooks/: useModels.ts  useWebSocketChat.ts
src/client/i18n/: i18next.d.ts  index.ts
src/client/types/: conversation.ts  message.ts  models.ts  task.ts  websocket.ts
src/client/utils/: chat-messages.ts  formatting.ts  notifications.ts
src/server/: embedded-assets.ts  index.ts  server-instance.ts
src/server/auth/: index.ts
src/server/db/: maintenance.ts  schema.ts
src/server/events/: conversation-event-bus.ts  run-executor.ts
src/server/http/: client-info.ts  platform-fetch.ts
src/server/routes/: api.ts  auth.ts  automations.ts  mcp.ts  ws.ts
src/server/sandbox/: config.ts  (+1 more)
tests/: unit-preload.ts
tests/client/: i18n-locales.test.ts  thoughts-section.test.ts  useWebSocketChat.reducer.test.ts
tests/e2e/: mock-preload.ts
tests/server/: ask_user.test.ts  read_webpage.test.ts
(+97 files in other folders)
