[package]
name = "pipali"
version = "0.4.0"
description = "Pipali - Personal AI for knowledge work. Make work easy."
authors = ["Khoj"]
edition = "2021"

# Note: crate-type not specified - defaults to rlib, which is what we need
# for linking with main.rs binary

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2.5"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
ureq = "2"
keepawake = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSError", "NSDictionary"] }
objc2-user-notifications = { version = "0.3", default-features = false, features = [
    "std",
    "bitflags",
    "block2",
    "UNUserNotificationCenter",
    "UNNotificationResponse",
    "UNNotificationContent",
    "UNNotificationRequest",
    "UNNotificationTrigger",
    "UNNotification",
    "UNNotificationSettings",
] }
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-winrt-notification = "0.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
